@@ -39,6 +39,8 @@
 * Fix stupid typo in detection of FreeBSD archs
 * Fix installation of local compilers with local paths endings with `.../ocaml/`
 * Fix the contents of `~/.opam/opam-init/variable.sh` after a switch
+* Request HTTP compression for downloads
+* Obey Content-Disposition for downloads if curl >= 7.26.0
 
 1.0.0 [Mar 2013]
 * Improve the lexer performance (thx to @oandrieu)
